--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -14,8 +14,8 @@ body {
 body canvas {
   grid-area: body;
   background: blue;
-  width: 100%;
-  height: 200px;
+  width: auto;
+  height: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
