--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@ body {
     grid-area: body;
     background: $b;
 
-    width: 100%;
-    height: 200px;
+    width: auto;
+    height: auto;
   }    
 }
