--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@ body {
     grid-area: body;
     background: $b;
 
-    width: auto;
-    height: auto;
+    width: 600;
+    height: 400;
   }    
 }
