--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -3,7 +3,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 2fr 1fr;
-  background-color: black;
+  background-color: #101010;
   row-gap: 20px;
   column-gap: 20px;
   justify-items: center;
@@ -13,7 +13,7 @@ body {
 }
 body canvas {
   grid-area: body;
-  background: blue;
+  background: #101010;
 }
 
 /*# sourceMappingURL=style.css.map */
