--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,7 +7,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 2fr 1fr;
-  background-color: black;
+  background-color: #101010;
   row-gap: 20px;
   column-gap: 20px;
   justify-items: center;
@@ -20,6 +20,6 @@ body {
 
   canvas {
     grid-area: body;
-    background: $b;
+    background: #101010;
   }
 }
